tests/functional/lang/eval-fail-overflowing-mul.err.exp
error:
       … while calling the 'mul' builtin
         at /pwd/lang/eval-fail-overflowing-mul.nix:3:10:
            2|   a = 4294967297;
            3| in a * a * a
             |          ^
            4|

       … while calling the 'mul' builtin
         at /pwd/lang/eval-fail-overflowing-mul.nix:3:6:
            2|   a = 4294967297;
            3| in a * a * a
             |      ^
            4|

       error: integer overflow in multiplying 4294967297 * 4294967297
